--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -9,3 +9,24 @@
     /* font-weight: bold; */
     color: white;
 }
+body {}
+
+
+.game {
+    margin: 10px 2px;
+    padding: 4px;
+    border: 1px solid gray;
+    background-color: antiquewhite;
+}
+
+.selected {
+    background-color: burlywood;
+}
+
+.gameField {
+    font-weight:bold;
+}
+
+.gameName{
+    color:#999;
+}
