--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -4,12 +4,22 @@
     font-size:larger;
 }
 
-.footer {
+
+
+.footer{
     text-align: center;
     /* font-weight: bold; */
     color: white;
+    height: 50px;
+    min-width: 100%;
+    
 }
-body {}
+
+
+.body {
+    min-height: calc(100vh - 70px);
+    
+}
 
 
 .game {
@@ -30,3 +40,44 @@ body {}
 .gameName{
     color: rgb(143, 133, 133);
 }
+ .features-icons {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
+  
+
+  .col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+  }
+
+  .row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-0.5 * var(--bs-gutter-x));
+    margin-left: calc(-0.5 * var(--bs-gutter-x));
+  }
+
+  .lead {
+    font-size: 1.25rem;
+    font-weight: 300;
+  }
+
+  .home {
+      text-align: center;
+  }
+
+ 
+
+.icon {
+    margin: auto !important;
+    padding-bottom: 1cm;
+  }
+
+  .intro {
+    margin: auto !important;
+    padding-top: .5cm;
+  }
