--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -35,7 +35,7 @@
     margin: 10px 2px;
     padding: 4px;
     border: 1px solid gray;
-    background-color: #ffffff;
+    background-color: #eeeeee;
     width: 350px;
     margin-left: 26%;
 }
